--- a/Area/Admin/Views/Shared/_layout.twig
+++ b/Area/Admin/Views/Shared/_layout.twig
@@ -20,6 +20,9 @@
     <!-- Custom Theme Style -->
     <link href="/Area/Admin/assets/css/custom.css" rel="stylesheet">
 
+    <!-- toastr -->
+    <link rel="stylesheet" href="/assets/elements/toastr/toastr.min.css" />
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -63,6 +66,9 @@
 
     <!-- Custom Theme Scripts -->
     <script src="/Area/Admin/assets/js/custom.min.js"></script>
+
+    <!-- toastr -->
+    <script src="/assets/elements/toastr/toastr.min.js"></script>
 
     {% block footer_scripts %}{% endblock %}
 
