--- a/Area/Admin/Views/Shared/_left_menu.twig
+++ b/Area/Admin/Views/Shared/_left_menu.twig
@@ -69,7 +69,7 @@
                     </li>
                     <li><a><i class="fa fa-money"></i> Transactions <span class="fa fa-chevron-down"></span></a>
                         <ul class="nav child_menu">
-                            <li><a href="/admin/transactions/index">Purchases</a></li>
+                            <li><a href="/admin/transactions">Purchases</a></li>
                             <li><a href="#">Purchases ban list</a></li>
                         </ul>
                     </li>
