Started implementing transactions records for date time

--- a/Area/Admin/Views/Shared/_layout.twig
+++ b/Area/Admin/Views/Shared/_layout.twig
@@ -65,7 +65,7 @@
     <script src="/Area/Admin/assets/js/nprogress.min.js"></script>
 
     <!-- Custom Theme Scripts -->
-    <script src="/Area/Admin/assets/js/custom.min.js"></script>
+    <script src="/Area/Admin/assets/js/custom.js"></script>
 
     <!-- toastr -->
     <script src="/assets/elements/toastr/toastr.min.js"></script>
