--- a/Area/Admin/Views/Transactions/index.twig
+++ b/Area/Admin/Views/Transactions/index.twig
@@ -11,7 +11,7 @@
          {#<div class="">#}
          <div class="page-title">
              <div class="title_left">
-                 <h3>Transactions</h3>
+                 <h3>Transactions <span id="daterange"></span></h3>
              </div>
 
              <div class="title_right">
@@ -28,6 +28,173 @@
 
          <div class="clearfix"></div>
 
+         <div class="row top_tiles">
+             <div class="animated flipInY col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                 <div class="tile-stats">
+                     <div class="icon"><i class="fa fa-sort-numeric-asc"></i></div>
+                     <div class="count">179</div>
+                     <h3>Sales #</h3>
+                     <p>Total number of sales</p>
+                 </div>
+             </div>
+             <div class="animated flipInY col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                 <div class="tile-stats">
+                     <div class="icon"><i class="fa fa-money"></i></div>
+                     <div class="count">$179</div>
+                     <h3>Revenue</h3>
+                     <p>Total revenue after sales and refunds</p>
+                 </div>
+             </div>
+             <div class="animated flipInY col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                 <div class="tile-stats">
+                     <div class="icon"><i class="fa fa-thumbs-o-up"></i></div>
+                     <div class="count">$179</div>
+                     <h3>Sales</h3>
+                     <p>Total sales</p>
+                 </div>
+             </div>
+             <div class="animated flipInY col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                 <div class="tile-stats">
+                     <div class="icon"><i class="fa fa-thumbs-o-down"></i></div>
+                     <div class="count">$179</div>
+                     <h3>Refunds</h3>
+                     <p>Total refunds</p>
+                 </div>
+             </div>
+         </div>
+
+         <div class="clearfix"></div>
+
+         <div class="row">
+             <div class="col-md-12">
+                 <div class="x_panel">
+                     <div class="x_title">
+                         <h2>Transaction Summary <small>Weekly progress</small></h2>
+                         <div class="filter">
+                             <div id="reportrange" class="pull-right" style="background: #fff; cursor: pointer; padding: 5px 10px; border: 1px solid #ccc">
+                                 <i class="glyphicon glyphicon-calendar fa fa-calendar"></i>
+                                 <span>December 30, 2014 - January 28, 2015</span> <b class="caret"></b>
+                             </div>
+                         </div>
+                         <div class="clearfix"></div>
+                     </div>
+                     <div class="x_content">
+                         <div class="col-md-9 col-sm-12 col-xs-12">
+                             <div class="demo-container" style="height:280px">
+                                 <div id="chart_plot_02" class="demo-placeholder"></div>
+                             </div>
+                             <div class="tiles">
+                                 <div class="col-md-4 tile">
+                                     <span>Total Sessions</span>
+                                     <h2>231,809</h2>
+                                     <span class="sparkline11 graph" style="height: 160px;">
+                               <canvas width="200" height="60" style="display: inline-block; vertical-align: top; width: 94px; height: 30px;"></canvas>
+                          </span>
+                                 </div>
+                                 <div class="col-md-4 tile">
+                                     <span>Total Revenue</span>
+                                     <h2>$231,809</h2>
+                                     <span class="sparkline22 graph" style="height: 160px;">
+                                <canvas width="200" height="60" style="display: inline-block; vertical-align: top; width: 94px; height: 30px;"></canvas>
+                          </span>
+                                 </div>
+                                 <div class="col-md-4 tile">
+                                     <span>Total Sessions</span>
+                                     <h2>231,809</h2>
+                                     <span class="sparkline11 graph" style="height: 160px;">
+                                 <canvas width="200" height="60" style="display: inline-block; vertical-align: top; width: 94px; height: 30px;"></canvas>
+                          </span>
+                                 </div>
+                             </div>
+
+                         </div>
+
+                         <div class="col-md-3 col-sm-12 col-xs-12">
+                             <div>
+                                 <div class="x_title">
+                                     <h2>Top Profiles</h2>
+                                     <ul class="nav navbar-right panel_toolbox">
+                                         <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                                         </li>
+                                         <li class="dropdown">
+                                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
+                                             <ul class="dropdown-menu" role="menu">
+                                                 <li><a href="#">Settings 1</a>
+                                                 </li>
+                                                 <li><a href="#">Settings 2</a>
+                                                 </li>
+                                             </ul>
+                                         </li>
+                                         <li><a class="close-link"><i class="fa fa-close"></i></a>
+                                         </li>
+                                     </ul>
+                                     <div class="clearfix"></div>
+                                 </div>
+                                 <ul class="list-unstyled top_profiles scroll-view">
+                                     <li class="media event">
+                                         <a class="pull-left border-aero profile_thumb">
+                                             <i class="fa fa-user aero"></i>
+                                         </a>
+                                         <div class="media-body">
+                                             <a class="title" href="#">Ms. Mary Jane</a>
+                                             <p><strong>$2300. </strong> Agent Avarage Sales </p>
+                                             <p> <small>12 Sales Today</small>
+                                             </p>
+                                         </div>
+                                     </li>
+                                     <li class="media event">
+                                         <a class="pull-left border-green profile_thumb">
+                                             <i class="fa fa-user green"></i>
+                                         </a>
+                                         <div class="media-body">
+                                             <a class="title" href="#">Ms. Mary Jane</a>
+                                             <p><strong>$2300. </strong> Agent Avarage Sales </p>
+                                             <p> <small>12 Sales Today</small>
+                                             </p>
+                                         </div>
+                                     </li>
+                                     <li class="media event">
+                                         <a class="pull-left border-blue profile_thumb">
+                                             <i class="fa fa-user blue"></i>
+                                         </a>
+                                         <div class="media-body">
+                                             <a class="title" href="#">Ms. Mary Jane</a>
+                                             <p><strong>$2300. </strong> Agent Avarage Sales </p>
+                                             <p> <small>12 Sales Today</small>
+                                             </p>
+                                         </div>
+                                     </li>
+                                     <li class="media event">
+                                         <a class="pull-left border-aero profile_thumb">
+                                             <i class="fa fa-user aero"></i>
+                                         </a>
+                                         <div class="media-body">
+                                             <a class="title" href="#">Ms. Mary Jane</a>
+                                             <p><strong>$2300. </strong> Agent Avarage Sales </p>
+                                             <p> <small>12 Sales Today</small>
+                                             </p>
+                                         </div>
+                                     </li>
+                                     <li class="media event">
+                                         <a class="pull-left border-green profile_thumb">
+                                             <i class="fa fa-user green"></i>
+                                         </a>
+                                         <div class="media-body">
+                                             <a class="title" href="#">Ms. Mary Jane</a>
+                                             <p><strong>$2300. </strong> Agent Avarage Sales </p>
+                                             <p> <small>12 Sales Today</small>
+                                             </p>
+                                         </div>
+                                     </li>
+                                 </ul>
+                             </div>
+                         </div>
+
+                     </div>
+                 </div>
+             </div>
+         </div>
+
          <div class="row">
              <div class="col-md-12 col-sm-12 col-xs-12">
                  <div class="x_panel">
@@ -37,13 +204,16 @@
                              <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a></li>
                              {#<li><a class="close-link"><i class="fa fa-calendar" aria-hidden="true"></i></a></li>#}
                              <li>
-                                 <div id="reportrange" class="pull-right"
-                                            style="background: #fff; cursor: pointer; padding: 5px 10px; border: 0px solid #ccc; width: 220px;
-                                            height: 30px; margin-left: 5px; margin-right: 5px;">
-                                     <i class="glyphicon glyphicon-calendar fa fa-calendar pull-right" v-on:click="openDateRange()"></i>&nbsp;
-                                     <span></span>
-                                     {#<span></span> <b class="caret"></b>#}
+                                 <div id="reportrange">
+                                    <i class="fa fa-calendar" style="margin: 8px 5px 0 5px; color: #C5C7CB;" v-on:click="openDateRange()"></i>
                                  </div>
+                                 {#<div id="reportrange" class="pull-right"#}
+                                            {#style="background: #fff; cursor: pointer; padding: 5px 10px; border: 0px solid #ccc; width: 220px;#}
+                                            {#height: 30px;">#}
+                                     {#<i class="glyphicon glyphicon-calendar fa fa-calendar pull-right" v-on:click="openDateRange()"></i>&nbsp;#}
+                                     {#<span></span>#}
+                                     {#<span></span> <b class="caret"></b>#}
+                                 {#</div>#}
                              </li>
                              <li class="dropdown">
                                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-sort"></i></a>
@@ -74,8 +244,8 @@
                                      <th class="column-title">Email</th>
                                      <th class="column-title">Country</th>
                                      <th class="column-title">Item</th>
-                                     <th class="column-title">Amount</th>
-                                     <th class="column-title">Payment Source</th>
+                                     <th class="column-title">$</th>
+                                     <th class="column-title">Merchant</th>
                                      <th class="column-title">Status</th>
                                      <th class="column-title">Date</th>
                                  </tr>
