--- a/Area/Admin/Views/Transactions/index.twig
+++ b/Area/Admin/Views/Transactions/index.twig
@@ -4,6 +4,8 @@
      <link rel="stylesheet" href="/Area/Admin/assets/css/checkbox.css" />
      <link rel="stylesheet" href="/assets/elements/daterangepicker/daterangepicker.css" />
      <link rel="stylesheet" href="/assets/elements/toastr/toastr.min.css" />
+
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
  {% endblock %}
 
  {% block body %}
@@ -69,19 +71,38 @@
              <div class="col-md-12">
                  <div class="x_panel">
                      <div class="x_title">
-                         <h2>Transaction Summary <small>Weekly progress</small></h2>
-                         <div class="filter">
-                             <div id="reportrange" class="pull-right" style="background: #fff; cursor: pointer; padding: 5px 10px; border: 1px solid #ccc">
-                                 <i class="glyphicon glyphicon-calendar fa fa-calendar"></i>
-                                 <span>December 30, 2014 - January 28, 2015</span> <b class="caret"></b>
-                             </div>
-                         </div>
+                         <h2>Transaction Summary </h2>
+                         {#<div class="filter">#}
+                             {#<div id="reportrange" class="pull-right" style="background: #fff; cursor: pointer; padding: 5px 10px; border: 1px solid #ccc">#}
+                                 {#<i class="glyphicon glyphicon-calendar fa fa-calendar"></i>#}
+                                 {#<span>December 30, 2014 - January 28, 2015</span> <b class="caret"></b>#}
+                             {#</div>#}
+                         {#</div>#}
+                         <ul class="nav navbar-right panel_toolbox">
+                             <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a></li>
+                             <li><a><i class="fa fa-search"></i></a></li>
+                             <li>
+                                 <div id="reportrange">
+                                     <i class="fa fa-calendar" style="margin: 8px 5px 0 5px; color: #C5C7CB;" v-on:click="openDateRange()"></i>
+                                 </div>
+                             </li>
+                             <li class="dropdown">
+                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-sort"></i></a>
+                                 <ul class="dropdown-menu" role="menu">
+                                     <li><a href="#" v-on:click="OrderBy('date')">Sort by date</a></li>
+                                     <li><a href="#" v-on:click="OrderBy('name')">Sort by name</a></li>
+                                     <li><a href="#" v-on:click="OrderBy('email')">Sort by email</a></li>
+                                     <li><a href="#" v-on:click="OrderBy('item_name')">Sort by item name</a></li>
+                                 </ul>
+                             </li>
+                             <li><a class="close-link"><i class="fa fa-close"></i></a></li>
+                         </ul>
                          <div class="clearfix"></div>
                      </div>
                      <div class="x_content">
                          <div class="col-md-9 col-sm-12 col-xs-12">
                              <div class="demo-container" style="height:280px">
-                                 <div id="chart_plot_02" class="demo-placeholder"></div>
+                                 <canvas id="chart_plot" class="demo-placeholder"></canvas>
                              </div>
                              <div class="tiles">
                                  <div class="col-md-4 tile">
@@ -112,80 +133,78 @@
                          <div class="col-md-3 col-sm-12 col-xs-12">
                              <div>
                                  <div class="x_title">
-                                     <h2>Top Profiles</h2>
-                                     <ul class="nav navbar-right panel_toolbox">
-                                         <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
-                                         </li>
-                                         <li class="dropdown">
-                                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
-                                             <ul class="dropdown-menu" role="menu">
-                                                 <li><a href="#">Settings 1</a>
-                                                 </li>
-                                                 <li><a href="#">Settings 2</a>
-                                                 </li>
-                                             </ul>
-                                         </li>
-                                         <li><a class="close-link"><i class="fa fa-close"></i></a>
-                                         </li>
-                                     </ul>
+                                     <h2>Today Transactions</h2>
                                      <div class="clearfix"></div>
                                  </div>
                                  <ul class="list-unstyled top_profiles scroll-view">
-                                     <li class="media event">
+
+                                     <li class="media event" v-for="today_transac in today_transactions">
                                          <a class="pull-left border-aero profile_thumb">
                                              <i class="fa fa-user aero"></i>
                                          </a>
                                          <div class="media-body">
-                                             <a class="title" href="#">Ms. Mary Jane</a>
-                                             <p><strong>$2300. </strong> Agent Avarage Sales </p>
-                                             <p> <small>12 Sales Today</small>
-                                             </p>
+                                             <div style="height: 10px;"></div>
+                                             <a class="title" href="#">{{ '{{ today_transac.fname }} {{ today_transac.lname }}' }}</a>
+                                             <p><strong>${{ '{{ today_transac.amount }}' }} </strong> {{ '{{ today_transac.item_name }}' }} </p>
+                                             {#<p> <small>12 Sales Today</small></p>#}
                                          </div>
                                      </li>
-                                     <li class="media event">
-                                         <a class="pull-left border-green profile_thumb">
-                                             <i class="fa fa-user green"></i>
-                                         </a>
-                                         <div class="media-body">
-                                             <a class="title" href="#">Ms. Mary Jane</a>
-                                             <p><strong>$2300. </strong> Agent Avarage Sales </p>
-                                             <p> <small>12 Sales Today</small>
-                                             </p>
-                                         </div>
-                                     </li>
-                                     <li class="media event">
-                                         <a class="pull-left border-blue profile_thumb">
-                                             <i class="fa fa-user blue"></i>
-                                         </a>
-                                         <div class="media-body">
-                                             <a class="title" href="#">Ms. Mary Jane</a>
-                                             <p><strong>$2300. </strong> Agent Avarage Sales </p>
-                                             <p> <small>12 Sales Today</small>
-                                             </p>
-                                         </div>
-                                     </li>
-                                     <li class="media event">
-                                         <a class="pull-left border-aero profile_thumb">
-                                             <i class="fa fa-user aero"></i>
-                                         </a>
-                                         <div class="media-body">
-                                             <a class="title" href="#">Ms. Mary Jane</a>
-                                             <p><strong>$2300. </strong> Agent Avarage Sales </p>
-                                             <p> <small>12 Sales Today</small>
-                                             </p>
-                                         </div>
-                                     </li>
-                                     <li class="media event">
-                                         <a class="pull-left border-green profile_thumb">
-                                             <i class="fa fa-user green"></i>
-                                         </a>
-                                         <div class="media-body">
-                                             <a class="title" href="#">Ms. Mary Jane</a>
-                                             <p><strong>$2300. </strong> Agent Avarage Sales </p>
-                                             <p> <small>12 Sales Today</small>
-                                             </p>
-                                         </div>
-                                     </li>
+
+                                     {#<li class="media event">#}
+                                         {#<a class="pull-left border-aero profile_thumb">#}
+                                             {#<i class="fa fa-user aero"></i>#}
+                                         {#</a>#}
+                                         {#<div class="media-body">#}
+                                             {#<a class="title" href="#">Ms. Mary Jane</a>#}
+                                             {#<p><strong>$2300. </strong> Agent Avarage Sales </p>#}
+                                             {#<p> <small>12 Sales Today</small>#}
+                                             {#</p>#}
+                                         {#</div>#}
+                                     {#</li>#}
+                                     {#<li class="media event">#}
+                                         {#<a class="pull-left border-green profile_thumb">#}
+                                             {#<i class="fa fa-user green"></i>#}
+                                         {#</a>#}
+                                         {#<div class="media-body">#}
+                                             {#<a class="title" href="#">Ms. Mary Jane</a>#}
+                                             {#<p><strong>$2300. </strong> Agent Avarage Sales </p>#}
+                                             {#<p> <small>12 Sales Today</small>#}
+                                             {#</p>#}
+                                         {#</div>#}
+                                     {#</li>#}
+                                     {#<li class="media event">#}
+                                         {#<a class="pull-left border-blue profile_thumb">#}
+                                             {#<i class="fa fa-user blue"></i>#}
+                                         {#</a>#}
+                                         {#<div class="media-body">#}
+                                             {#<a class="title" href="#">Ms. Mary Jane</a>#}
+                                             {#<p><strong>$2300. </strong> Agent Avarage Sales </p>#}
+                                             {#<p> <small>12 Sales Today</small>#}
+                                             {#</p>#}
+                                         {#</div>#}
+                                     {#</li>#}
+                                     {#<li class="media event">#}
+                                         {#<a class="pull-left border-aero profile_thumb">#}
+                                             {#<i class="fa fa-user aero"></i>#}
+                                         {#</a>#}
+                                         {#<div class="media-body">#}
+                                             {#<a class="title" href="#">Ms. Mary Jane</a>#}
+                                             {#<p><strong>$2300. </strong> Agent Avarage Sales </p>#}
+                                             {#<p> <small>12 Sales Today</small>#}
+                                             {#</p>#}
+                                         {#</div>#}
+                                     {#</li>#}
+                                     {#<li class="media event">#}
+                                         {#<a class="pull-left border-green profile_thumb">#}
+                                             {#<i class="fa fa-user green"></i>#}
+                                         {#</a>#}
+                                         {#<div class="media-body">#}
+                                             {#<a class="title" href="#">Ms. Mary Jane</a>#}
+                                             {#<p><strong>$2300. </strong> Agent Avarage Sales </p>#}
+                                             {#<p> <small>12 Sales Today</small>#}
+                                             {#</p>#}
+                                         {#</div>#}
+                                     {#</li>#}
                                  </ul>
                              </div>
                          </div>
@@ -199,36 +218,9 @@
              <div class="col-md-12 col-sm-12 col-xs-12">
                  <div class="x_panel">
                      <div class="x_title">
-                         <h2>Last Transactions</h2>
-                         <ul class="nav navbar-right panel_toolbox">
-                             <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a></li>
-                             {#<li><a class="close-link"><i class="fa fa-calendar" aria-hidden="true"></i></a></li>#}
-                             <li>
-                                 <div id="reportrange">
-                                    <i class="fa fa-calendar" style="margin: 8px 5px 0 5px; color: #C5C7CB;" v-on:click="openDateRange()"></i>
-                                 </div>
-                                 {#<div id="reportrange" class="pull-right"#}
-                                            {#style="background: #fff; cursor: pointer; padding: 5px 10px; border: 0px solid #ccc; width: 220px;#}
-                                            {#height: 30px;">#}
-                                     {#<i class="glyphicon glyphicon-calendar fa fa-calendar pull-right" v-on:click="openDateRange()"></i>&nbsp;#}
-                                     {#<span></span>#}
-                                     {#<span></span> <b class="caret"></b>#}
-                                 {#</div>#}
-                             </li>
-                             <li class="dropdown">
-                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-sort"></i></a>
-                                 <ul class="dropdown-menu" role="menu">
-                                     <li><a href="#" v-on:click="OrderBy('date')">Sort by date</a></li>
-                                     <li><a href="#" v-on:click="OrderBy('name')">Sort by name</a></li>
-                                     <li><a href="#" v-on:click="OrderBy('email')">Sort by email</a></li>
-                                     <li><a href="#" v-on:click="OrderBy('item_name')">Sort by item name</a></li>
-                                 </ul>
-                             </li>
-                             <li><a class="close-link"><i class="fa fa-close"></i></a></li>
-                         </ul>
+                         <h2>Transaction records</h2>
                          <div class="clearfix"></div>
                      </div>
-
 
                      <div class="x_content">
 
@@ -311,6 +303,73 @@
      <script src="/Area/Admin/assets/js/vuejs/transactions/index.js"></script>
 
      <script src="/assets/elements/toastr/toastr.min.js"></script>
+
+     <script type="text/javascript">
+
+         var ctx = document.getElementById("chart_plot");
+
+         var data = {
+             labels: ["January", "February", "March", "April", "May", "June", "July"],
+             datasets: [
+                 {
+                     label: "Transactions",
+                     fill: false,
+                     lineTension: 0.1,
+                     backgroundColor: "rgba(75,192,192,0.4)",
+//                     borderColor: "rgba(75,192,192,1)",
+                     borderColor: "rgba(75,192,192,1)",
+                     borderCapStyle: 'butt',
+                     borderDash: [],
+                     borderDashOffset: 0.0,
+                     borderJoinStyle: 'miter',
+                     pointBorderColor: "rgba(75,192,192,1)",
+                     pointBackgroundColor: "#fff",
+                     pointBorderWidth: 7,
+                     pointHoverRadius: 5,
+                     pointHoverBackgroundColor: "rgba(75,192,192,1)",
+                     pointHoverBorderColor: "rgba(75,192,192,1)",
+                     pointHoverBorderWidth: 2,
+                     pointRadius: 1,
+                     pointHitRadius: 10,
+                     data: [65, 59, 80, 81, 56, 55, 40],
+                     spanGaps: false,
+                 },
+                 {
+                     label: "Refunds",
+                     fill: false,
+                     lineTension: 0.1,
+                     backgroundColor: "rgba(225,31,17,0.4)",
+                     borderColor: "rgba(225,31,17,1)",
+                     borderCapStyle: 'butt',
+                     borderDash: [],
+                     borderDashOffset: 0.0,
+                     borderJoinStyle: 'miter',
+                     pointBorderColor: "rgba(225,31,17,1)",
+                     pointBackgroundColor: "#fff",
+                     pointBorderWidth: 7,
+                     pointHoverRadius: 5,
+                     pointHoverBackgroundColor: "rgba(225,31,17,1)",
+                     pointHoverBorderColor: "rgba(225,31,17,1)",
+                     pointHoverBorderWidth: 2,
+                     pointRadius: 1,
+                     pointHitRadius: 10,
+                     data: [2, 90, 75, 60, 11, 40, 20],
+                     spanGaps: false,
+                 }
+             ]
+         };
+
+         var options = {
+             maintainAspectRatio: false,
+             responsive: true
+         };
+
+
+         var myLineChart = Chart.Line(ctx, {
+             data: data,
+             options: options
+         });
+     </script>
 
 
  {% endblock %}
