adjusted size of login form

--- a/Views/Account/index.twig
+++ b/Views/Account/index.twig
@@ -17,7 +17,7 @@
 <div class="container" id="login-panel">
     <div class="row">
         <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-4 col-lg-5 col-lg-offset-3">
-            <div class="account-wall">
+            <div class="account-wall" style="width: 370px;">
                 <img src="/assets/images/members-login.png" class="center-block" alt="" />
 
                 <div class="alert alert-danger round-corners-none margin-top-15 margin-bottom-5" v-cloak v-show="alert.error">
