--- a/Area/Admin/Views/Transactions/index.twig
+++ b/Area/Admin/Views/Transactions/index.twig
@@ -101,34 +101,35 @@
                          </ul>
                          <div class="clearfix"></div>
                      </div>
-                     <div class="x_content">
+                     <div class="x_content" style="height: 350px;">
                          <div class="col-md-9 col-sm-12 col-xs-12">
-                             <div class="demo-container" style="height:280px">
+                             <div class="demo-container" style="height:320px">
                                  <canvas id="chart_plot" class="demo-placeholder"></canvas>
                              </div>
-                             <div class="tiles">
-                                 <div class="col-md-4 tile">
-                                     <span>Total Sessions</span>
-                                     <h2>231,809</h2>
-                                     <span class="sparkline11 graph" style="height: 160px;">
-                               <canvas width="200" height="60" style="display: inline-block; vertical-align: top; width: 94px; height: 30px;"></canvas>
-                          </span>
-                                 </div>
-                                 <div class="col-md-4 tile">
-                                     <span>Total Revenue</span>
-                                     <h2>$231,809</h2>
-                                     <span class="sparkline22 graph" style="height: 160px;">
-                                <canvas width="200" height="60" style="display: inline-block; vertical-align: top; width: 94px; height: 30px;"></canvas>
-                          </span>
-                                 </div>
-                                 <div class="col-md-4 tile">
-                                     <span>Total Sessions</span>
-                                     <h2>231,809</h2>
-                                     <span class="sparkline11 graph" style="height: 160px;">
-                                 <canvas width="200" height="60" style="display: inline-block; vertical-align: top; width: 94px; height: 30px;"></canvas>
-                          </span>
-                                 </div>
-                             </div>
+                             <!-- tiles under the chart plot -->
+                             {#<div class="tiles">#}
+                                 {#<div class="col-md-4 tile">#}
+                                     {#<span>Total Sessions</span>#}
+                                        {#<h2>231,809</h2>#}
+                                        {#<span class="sparkline11 graph" style="height: 160px;">#}
+                                        {#<canvas width="200" height="60" style="display: inline-block; vertical-align: top; width: 94px; height: 30px;"></canvas>#}
+                                     {#</span>#}
+                                 {#</div>#}
+                                 {#<div class="col-md-4 tile">#}
+                                     {#<span>Total Revenue</span>#}
+                                         {#<h2>$231,809</h2>#}
+                                         {#<span class="sparkline22 graph" style="height: 160px;">#}
+                                         {#<canvas width="200" height="60" style="display: inline-block; vertical-align: top; width: 94px; height: 30px;"></canvas>#}
+                                     {#</span>#}
+                                 {#</div>#}
+                                 {#<div class="col-md-4 tile">#}
+                                     {#<span>Total Sessions</span>#}
+                                         {#<h2>231,809</h2>#}
+                                         {#<span class="sparkline11 graph" style="height: 160px;">#}
+                                        {#<canvas width="200" height="60" style="display: inline-block; vertical-align: top; width: 94px; height: 30px;"></canvas>#}
+                                     {#</span>#}
+                                 {#</div>#}
+                             {#</div>#}
 
                          </div>
 
@@ -166,7 +167,10 @@
              </div>
          </div>
 
-         <div class="row" v-if="transactions.length > 0">
+         <div class="clearfix"></div>
+
+         <!-- list of transactions for a selected date range -->
+         <div class="row" v-if="transactions.length > 0" style="margin-top: 25px;">
              <div class="col-md-12 col-sm-12 col-xs-12">
                  <div class="x_panel">
                      <div class="x_title">
